# anime_recommender

./: pyproject.toml  tech_stack.ipynb
config/: config.py
notebooks/: data_loader.ipynb  prompt_template.ipynb  vector_store.ipynb
